--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="about-me">
         <nav>
@@ -29,16 +30,16 @@
                     </li>
                 </ul>
         </nav>
-        <div class="flex-1">
+        <div class=" flex flex-1">
             <div class="about-me__info row">
                 <div class="about-me__info--container">
-                    <figure class="about-me__info--mask">
+                    <figure class="about-me__picture--mask">
                         <img src="./assets/me.jpeg" class="about-me__picture" alt="Picture of Me">
                     </figure>
                     <h1 class="about-me__info--title">
                         Hey! I'm <span class="text--pink">Angelica Estoque</span> 👋
                     </h1>
-                    <p class="about-me__info-para">
+                    <p class="about-me__info--para">
                         I'm a <strong class="text--pink">frontend software engineer</strong> with a strong passion for building responsive and performant web applications with great user experiences that positively impacts the world.
                     </p>
                     <div class="about-me__links">
@@ -57,6 +58,23 @@
                         <a href="" class="about-me__link">
                             <i class="fas fa-file-pdf"></i>
                         </a>
+                    </div>
+                </div>
+                <figure class="about-me__img--container">
+                    <img src="./assets/undraw_websites.svg" class="about-me__img "alt="">
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section id="Languages">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title"> This is my technology stack</h1>
+                <div class="language__list">
+                    <div class="Language">
+                        <figure class="language__img--wrapper">
+                            <img src="" alt="" class="language__img">
+                        </figure>
                     </div>
                 </div>
             </div>
